работа над ошибками - namespace default in task01

--- a/kubernetes-security/task01/05-crb.yaml
+++ b/kubernetes-security/task01/05-crb.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: dave
-  namespace: kube-public
+  namespace: default
 roleRef:
   kind: ClusterRole
   name: getout
