--- a/kubernetes-security/task01/02-crb.yaml
+++ b/kubernetes-security/task01/02-crb.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: bob
-  namespace: kube-public
+  namespace: default
 roleRef:
   kind: ClusterRole
   name: admin
