--- a/kubernetes-security/task02/03-role.yaml
+++ b/kubernetes-security/task02/03-role.yaml
@@ -3,6 +3,6 @@ kind: ClusterRole
 metadata:
   name: glw-prometheus
 rules:
-- apiGroups: [ "" ]
+- apiGroups: [ "*" ]
   resources: [ "pods" ]
   verbs: [ "get", "list", "watch" ]
