--- a/kubernetes-security/task02/04-rolebinding.yaml
+++ b/kubernetes-security/task02/04-rolebinding.yaml
@@ -6,6 +6,9 @@ subjects:
 - kind: ServiceAccount
   name: carol
   namespace: prometheus
+- kind: Group
+  name: system:serviceaccounts:prometheus
+  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
   name: glw-prometheus
